--- a/grid.html
+++ b/grid.html
@@ -11,20 +11,20 @@
     <h1 class="teg">Baku Foto Galary</h1>
 
     <section class="container">
-        <img class="image" src="./assets/image/img1.jpeg" alt="foto">
-        <img class="image" src="./assets/image/img2.jpeg" alt="foto">
-        <img class="image" src="./assets/image/img3.jpeg" alt="foto">
-        <img class="image" src="./assets/image/img4.webp" alt="foto">
-        <img class="image" src="./assets/image/img5.jpeg" alt="foto">
-        <img class="image" src="./assets/image/img6.jpeg" alt="foto">
-        <img class="image" src="./assets/image/img7.jpeg" alt="foto">
-        <img class="image" src="./assets/image/img8.jpeg" alt="foto">
-        <img class="image" src="./assets/image/img9.jpeg" alt="foto">
-        <img class="image" src="./assets/image/img10.jpeg" alt="foto">
-        <img class="image" src="./assets/image/img11.jpeg" alt="foto">
-        <img class="image" src="./assets/image/img13.jpeg" alt="foto">
-        <img class="image" src="./assets/image/img14.jpeg" alt="foto">
-        <img class="image" src="./assets/image/img15.jpeg" alt="foto">
+        <img class="item img1" src="./assets/image/img1.jpeg" alt="foto">
+        <img class="item img2" src="./assets/image/img2.jpeg" alt="foto">
+        <img class="item img3" src="./assets/image/img3.jpeg" alt="foto">
+        <img class="item img4" src="./assets/image/img4.webp" alt="foto">
+        <img class="item img5" src="./assets/image/img5.jpeg" alt="foto">
+        <img class="item img6" src="./assets/image/img6.jpeg" alt="foto">
+        <img class="item img7" src="./assets/image/img7.jpeg" alt="foto">
+        <img class="item img8" src="./assets/image/img8.jpeg" alt="foto">
+        <img class="item img9" src="./assets/image/img9.jpeg" alt="foto">
+        <img class="item img10" src="./assets/image/img10.jpeg" alt="foto">
+        <img class="item img11" src="./assets/image/img11.jpeg" alt="foto">
+        <img class="item img13" src="./assets/image/img13.jpeg" alt="foto">
+        <img class="item img14" src="./assets/image/img14.jpeg" alt="foto">
+        <img class="item img15" src="./assets/image/img15.jpeg" alt="foto">
     </section>
 </body>
 </html>
